Fix regression on scala/scala3#22756